# med-triage-openenv

./: .geminiignore  Dockerfile  PROJECT_SUMMARY.md  README.md  REMINDERS.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  requirements.txt  triage_environment.py
